Project3/src/parser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package parser;

import java.util.LinkedList;
import Absyn.*;
import java.io.*;

public class MiniJavaParser implements MiniJavaParserConstants {

        public static void main(String[] args) {
                PrintVisitor visitor = new PrintVisitor();

                try {
                        MiniJavaParser parser = new MiniJavaParser(new FileReader(args[0]));
                } catch (IOException e) {
                        System.err.println(e.getMessage());
                }

                try {
                        visitor.visit(Goal());
                } catch (ParseException e) {
                        System.err.println(e.getMessage());
                }
        }

/**************************************************
 * The MiniJava language grammar starts here      *
 **************************************************/

// Goal ::= MainClassDeclaration ( ClassDeclaration | ThreadDeclaration )* <EOF>
  static final public Program Goal() throws ParseException {
        // Variable declarations go here
        LinkedList<ClassDecl> classList = new LinkedList<ClassDecl>();
    MainClassDeclaration(classList);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(4)) {
        ClassDeclaration(classList);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 32:
          ThreadDeclaration(classList);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
          {if (true) return new Program(classList);}
    throw new Error("Missing return statement in function");
  }

// ClassName ::= "class" <ID>
  static final public String ClassName() throws ParseException {
        Token className;
    jj_consume_token(32);
    className = jj_consume_token(ID);
          {if (true) return className.image;}
    throw new Error("Missing return statement in function");
  }

// MainClassDeclaration ::=	ClassName "{" "public" "static" "void" "main" "(" "String" "[" "]" <ID> ")" "{" ( VarDeclaration )* ( Statement )* "}" "}"
  static final public void MainClassDeclaration(LinkedList<ClassDecl> classList) throws ParseException {
        String name;
        Token argsId;
        LinkedList<VarDecl> localsList = new LinkedList<VarDecl>();
        LinkedList<Stmt> statements = new LinkedList<Stmt>();
    name = ClassName();
    jj_consume_token(10);
    jj_consume_token(27);
    jj_consume_token(28);
    jj_consume_token(29);
    jj_consume_token(30);
    jj_consume_token(6);
    jj_consume_token(31);
    jj_consume_token(8);
    jj_consume_token(9);
    argsId = jj_consume_token(ID);
    jj_consume_token(7);
    jj_consume_token(10);
    label_2:
    while (true) {
      if (jj_2_2(3)) {
        ;
      } else {
        break label_2;
      }
      VarDeclaration(localsList);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
      case 37:
      case 39:
      case 40:
      case 41:
      case 42:
      case 43:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      Statement(statements);
    }
    jj_consume_token(11);
    jj_consume_token(11);
                LinkedList<MethodDecl> methods = new LinkedList<MethodDecl>();
                LinkedList<Formal> params = new LinkedList<Formal>();
                Formal args = new Formal(new ArrayType(new IdentifierType("String")), argsId.image);
                params.add(args);
                IdentifierType pub_stat_void = new IdentifierType("public_static_void");
                MethodDecl mainMethod = new MethodDecl(pub_stat_void, false, "main", params, localsList, statements, new IntegerLiteral(0));
                methods.add(mainMethod);
                classList.add(new ClassDecl(name, null, new LinkedList<VarDecl>(), methods));
  }

// ClassDeclaration	::=	ClassName ( "extends" <ID> )? "{" ( FieldDeclaration | MethodDeclaration | VoidDeclaration )* "}"
  static final public void ClassDeclaration(LinkedList<ClassDecl> classList) throws ParseException {
        String name;
        Token parent = null;
        LinkedList<VarDecl> fields = new LinkedList<VarDecl>();
        LinkedList<MethodDecl> methods = new LinkedList<MethodDecl>();
    name = ClassName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
      jj_consume_token(33);
      parent = jj_consume_token(ID);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(10);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 27:
      case 46:
      case 47:
      case ID:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 46:
      case 47:
      case ID:
        FieldDeclaration(fields);
        break;
      default:
        jj_la1[5] = jj_gen;
        if (jj_2_3(2)) {
          MethodDeclaration(methods);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 27:
            VoidDeclaration(methods);
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    jj_consume_token(11);
          classList.add(new ClassDecl(name, parent == null ? null : parent.image, fields, methods));
  }

// ThreadDeclaration ::= ClassName "extends" "Thread" "{" ( FieldDeclaration | MethodDeclaration | VoidDeclaration )* "}"
  static final public void ThreadDeclaration(LinkedList<ClassDecl> classList) throws ParseException {
        String name;
        LinkedList<VarDecl> fields = new LinkedList<VarDecl>();
        LinkedList<MethodDecl> methods = new LinkedList<MethodDecl>();
    name = ClassName();
    jj_consume_token(33);
    jj_consume_token(34);
    jj_consume_token(10);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 27:
      case 46:
      case 47:
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 46:
      case 47:
      case ID:
        FieldDeclaration(fields);
        break;
      default:
        jj_la1[8] = jj_gen;
        if (jj_2_4(2)) {
          MethodDeclaration(methods);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 27:
            VoidDeclaration(methods);
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    jj_consume_token(11);
          classList.add(new ThreadDecl(name, fields, methods));
  }

// VarDeclaration ::= Type <ID> ( "=" Expression )? ";"
  static final public void VarDeclaration(LinkedList<VarDecl> vars) throws ParseException {
        Type type;
        Token id;
        Expr init = null;
    type = Type();
    id = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 20:
      jj_consume_token(20);
      init = Expression();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(26);
          vars.add(new VarDecl(type, id.image, init));
  }

// MethodDeclaration ::= "public" Type <ID> "(" ( "synchronized" )? ( Type <ID> ( "," Type <ID> )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}"
  static final public void MethodDeclaration(LinkedList<MethodDecl> methods) throws ParseException {
        Type returnType;
        Token id;
        boolean sync = false;
        Type paramType;
        Token paramId;
        LinkedList<Formal> params = new LinkedList<Formal>();
        LinkedList<VarDecl> locals = new LinkedList<VarDecl>();
        LinkedList<Stmt> statements = new LinkedList<Stmt>();
        Expr returnVal;
    jj_consume_token(27);
    returnType = Type();
    id = jj_consume_token(ID);
    jj_consume_token(6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
                                                                      sync = true;
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
    case 47:
    case ID:
      paramType = Type();
      paramId = jj_consume_token(ID);
                                                      params.add(new Formal(paramType, paramId.image));
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        jj_consume_token(25);
        paramType = Type();
        paramId = jj_consume_token(ID);
                                                          params.add(new Formal(paramType, paramId.image));
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(7);
    jj_consume_token(10);
    label_7:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_7;
      }
      VarDeclaration(locals);
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
      case 37:
      case 39:
      case 40:
      case 41:
      case 42:
      case 43:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      Statement(statements);
    }
    jj_consume_token(36);
    returnVal = Expression();
    jj_consume_token(26);
    jj_consume_token(11);
          methods.add(new MethodDecl(returnType, sync, id.image, params, locals, statements, returnVal));
  }

// VoidDeclaration ::= "public" "void" <ID> "(" ")" "{" ( VarDeclaration )* ( Statement )* "}"
  static final public void VoidDeclaration(LinkedList<MethodDecl> methods) throws ParseException {
        Token id;
        LinkedList<VarDecl> locals = new LinkedList<VarDecl>();
        LinkedList<Stmt> statements = new LinkedList<Stmt>();
    jj_consume_token(27);
    jj_consume_token(29);
    id = jj_consume_token(ID);
    jj_consume_token(6);
    jj_consume_token(7);
    jj_consume_token(10);
    label_9:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_9;
      }
      VarDeclaration(locals);
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
      case 37:
      case 39:
      case 40:
      case 41:
      case 42:
      case 43:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      Statement(statements);
    }
    jj_consume_token(11);
          methods.add(new VoidDecl(id.image, locals, statements));
  }

// FieldDeclaration ::= Type <ID> ";"
  static final public void FieldDeclaration(LinkedList<VarDecl> fields) throws ParseException {
        Type type;
        Token id;
    type = Type();
    id = jj_consume_token(ID);
    jj_consume_token(26);
          fields.add(new VarDecl(type, id.image, null));
  }

// Type ::= <ID> ( "[" "]" )*
//      |   "boolean" ( "[" "]" )*
//      |   "int" ( "[" "]" )*
  static final public Type Type() throws ParseException {
        Token id = null;
        int dimensions = 0;
        boolean isBool = false, isInt = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      id = jj_consume_token(ID);
      break;
    case 47:
      jj_consume_token(47);
                                  isBool = true;
      break;
    case 46:
      jj_consume_token(46);
                                                             isInt = true;
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_11:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(8);
      jj_consume_token(9);
                                 dimensions++;
    }
                Type t;
                if (isBool) t = new BooleanType();
                else if (isInt) t = new IntegerType();
                else t = new IdentifierType(id.image);
                for (int i = 0; i < dimensions; ++i) {
                        t = new ArrayType(t);
                }
                {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

// Statement ::= "{" ( Statement )* "}"
//           |   "if" "(" Expression ")" Statement ( "else" Statement )?
//           |   "while" "(" Expression ")" Statement
//           |   "Xinu" "." <ID> "(" ( Expression ( "," Expression )* )? ")" ";"
//           |   Expression "=" Expression ";"
  static final public void Statement(LinkedList<Stmt> statements) throws ParseException {
        LinkedList<Stmt> innerStatements = new LinkedList<Stmt>();
        Expr innerExpr1 = null, innerExpr2 = null;
        LinkedList<Expr> innerExpressions = new LinkedList<Expr>();
        Token xinuId = null;
        String type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
      jj_consume_token(10);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
        case 37:
        case 39:
        case 40:
        case 41:
        case 42:
        case 43:
        case 44:
        case 45:
        case INT:
        case STRING:
        case ID:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_12;
        }
        Statement(innerStatements);
      }
      jj_consume_token(11);
                                                    type = "block";
      break;
    case 37:
      jj_consume_token(37);
      jj_consume_token(6);
      innerExpr1 = Expression();
      jj_consume_token(7);
      Statement(innerStatements);
      if (jj_2_8(2)) {
        jj_consume_token(38);
        Statement(innerStatements);
      } else {
        ;
      }
                                                                                                                                 type = "if";
      break;
    case 39:
      jj_consume_token(39);
      jj_consume_token(6);
      innerExpr1 = Expression();
      jj_consume_token(7);
      Statement(innerStatements);
                                                                                 type = "while";
      break;
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_9(3)) {
        jj_consume_token(40);
        jj_consume_token(12);
        xinuId = jj_consume_token(ID);
        MethodCall(innerExpressions);
        jj_consume_token(26);
                                                                                   type = "xinu";
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 40:
        case 41:
        case 42:
        case 43:
        case 44:
        case 45:
        case INT:
        case STRING:
        case ID:
          innerExpr1 = AssignableExpression();
          jj_consume_token(20);
          innerExpr2 = Expression();
          jj_consume_token(26);
                                                                                  type = "assign";
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
                if (type.equals("block")) statements.add(new BlockStmt(innerStatements));
                else if (type.equals("if")) {
                        if (innerStatements.size() == 1) statements.add(new IfStmt(innerExpr1, innerStatements.get(0), null));
                        else statements.add(new IfStmt(innerExpr1, innerStatements.get(0), innerStatements.get(1)));
                } else if (type.equals("while")) {
                        statements.add(new WhileStmt(innerExpr1, innerStatements.get(0)));
                }
                else if (type.equals("xinu")) statements.add(new XinuCallStmt(xinuId.image, innerExpressions));
                else if (type.equals("assign")) statements.add(new AssignStmt((AssignableExpr)innerExpr1, innerExpr2));
  }

// Expression ::= Expression1 ( "||" Expression1 )*
  static final public Expr Expression() throws ParseException {
        Expr left, right = null;
        LinkedList<Expr> exprs = new LinkedList<Expr>();
    left = Expression1();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_13;
      }
      jj_consume_token(24);
      right = Expression1();
                                                            exprs.add(right);
    }
                for (Expr expr : exprs) {
                        left = new OrExpr(left, right);
                }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }
